--- a/views/index.ejs
+++ b/views/index.ejs
@@ -278,7 +278,8 @@
                         Musics['QQMusic_'+clist[j].songid].songname=urldecode(clist[j].songname);
                         Musics['QQMusic_'+clist[j].songid].singer=urldecode(clist[j].singername);
                         Musics['QQMusic_'+clist[j].songid].albumname=urldecode(clist[j].albumname);
-                        Musics['QQMusic_'+clist[j].songid].audio_url=clist[j].m4a;
+                        //Musics['QQMusic_'+clist[j].songid].audio_url=clist[j].m4a;
+                        Musics['QQMusic_'+clist[j].songid].audio_url="http://tsmusic24.tc.qq.com/"+clist[j].songid+".mp3";
                         Musics['QQMusic_'+clist[j].songid].picture_small=clist[j].albumpic_small;
                         Musics['QQMusic_'+clist[j].songid].picture_big=clist[j].albumpic_big;
 
